--- a/Manage_lead/appsettings.json
+++ b/Manage_lead/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=manage_lead;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
