feat(seed): Add o seed para leads

--- a/Manage_lead/appsettings.json
+++ b/Manage_lead/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=manage_lead;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "SendGrid": {
+    "ApiKey": ""
   }
 }
